--- a/libs/gmime/HISTORY
+++ b/libs/gmime/HISTORY
@@ -1,3 +1,6 @@
+2007-12-29 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.2.12
+
 2007-11-13 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.2.11
 
