--- a/gnome2-libs/goffice-0.5/HISTORY
+++ b/gnome2-libs/goffice-0.5/HISTORY
@@ -1,3 +1,6 @@
+2007-12-29 Robin Cook <rcook@wyrms.net>
+	* DETAILS: changed BRANCH back
+
 2007-12-05 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to VERSION 0.5.4
 
