--- a/gnome2-libs/tracker/HISTORY
+++ b/gnome2-libs/tracker/HISTORY
@@ -1,3 +1,7 @@
+2007-12-29 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 0.6.4
+	* PRE_BUILD: commented out the inotify patch until can be fixed.
+
 2007-09-27 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 0.6.3
 
