--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2007-12-30 Juuso Alasuutari <iuso@sourcemage.org>
 	* libs/libg15: New spell, a library for the Logitech G15 keyboard.
+	* graphics-libs/libg15render: New spell, a library to render graphics
+	  buffers for use with libg15.
 
 2007-12-29 Robin Cook <rcook@wyrms.net>
 	* gnome2-lib/goffice-0.6: new spell
