--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 	* libs/libg15: New spell, a library for the Logitech G15 keyboard.
 	* graphics-libs/libg15render: New spell, a library to render graphics
 	  buffers for use with libg15.
+	* utils/g15daemon: New spell, a daemon to control the Logitech G15
+	  keyboard.
 
 2007-12-29 Robin Cook <rcook@wyrms.net>
 	* gnome2-lib/goffice-0.6: new spell
