--- a/printer/gutenprint/HISTORY
+++ b/printer/gutenprint/HISTORY
@@ -1,3 +1,6 @@
+2007-12-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 5.1.5
+
 2007-12-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.1.4
 
