--- a/kde-apps/kipi-plugins/HISTORY
+++ b/kde-apps/kipi-plugins/HISTORY
@@ -1,3 +1,7 @@
+2007-12-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.1.5-rc1
+	* DEPENDS: add libgpod
+
 2007-10-24 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DEPENDS: added arts for disabling #14038
 
