--- a/kde4/kdegraphics4/HISTORY
+++ b/kde4/kdegraphics4/HISTORY
@@ -1,3 +1,6 @@
+2007-12-30  Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: add ghostscript -sub LIBS
+
 2007-12-29  Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: delete imlib
 
