--- a/printer/ghostscript/HISTORY
+++ b/printer/ghostscript/HISTORY
@@ -1,3 +1,8 @@
+2007-12-30 Treeve Jelbert <treeve@sourcemage.org>
+	* CONFIGURE: clarify message
+	* DEPENDS: make gtk+2 optional
+	* PRE_SUB_DEPENDS, SUB_DEPENDS: added
+
 2007-11-23 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 8.61
 
