--- a/audio-creation/jack-keyboard/HISTORY
+++ b/audio-creation/jack-keyboard/HISTORY
@@ -1,2 +1,6 @@
+2007-12-31 Juuso Alasuutari <iuso@sourcemage.org>
+	* DEPENDS: Changed depends jack to JACK-DRIVER because jackdmp
+	  now has MIDI support.
+
 2007-10-21 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS, DEPENDS, BUILD, INSTALL: Created spell.
