--- a/ftp/transmission/HISTORY
+++ b/ftp/transmission/HISTORY
@@ -1,3 +1,6 @@
+2007-12-31 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: fixed WEB_SITE
+
 2007-12-11 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.96
 
