--- a/gnome2-libs/goffice-0.6/HISTORY
+++ b/gnome2-libs/goffice-0.6/HISTORY
@@ -1,2 +1,6 @@
+2008-01-01 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL++
+	* PRE_BUILD: fixed gtk-doc bug, until upstream fixes it properly
+
 2007-12-29 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 0.6.1
