--- a/kernels/virtualbox-module/HISTORY
+++ b/kernels/virtualbox-module/HISTORY
@@ -1,3 +1,6 @@
+2008-01-01 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.5.4
+
 2007-11-19 Julien "_kaze_" ROZO <julien@rozo.org>
 	* TRIGGERS: added, virtualbox-module is casted if linux is casted again.
 
