--- a/utils/virtualbox/HISTORY
+++ b/utils/virtualbox/HISTORY
@@ -1,3 +1,8 @@
+2008-01-01 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.5.4
+	* DEPENDS: added pulseaudio
+	* PRE_BUILD: updated
+
 2007-12-20 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DEPENDS: added sdl and X11-LIBS as dependencies
 	* BUILD, Xcursor.patch: added a patch to solve compilation issue with
