--- a/libs/libcdio/HISTORY
+++ b/libs/libcdio/HISTORY
@@ -1,3 +1,6 @@
+2008-01-01 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.79
+
 2007-10-24 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 0.78.2 (fixes compile issue with glibc 2.6)
 	  Use upstream gnu.gpg key
