--- a/kernels/hibernate-script/HISTORY
+++ b/kernels/hibernate-script/HISTORY
@@ -1,3 +1,6 @@
+2008-01-01 Mathieu Lonjaret <lejatorn@sourcemage.org>
+	* DETAILS: update to 1.97
+
 2006-12-03 Flavien Bridault <vlaaad@sourcemage.org>
 	* INSTALL: Install missing scripts
 	* DETAILS: PATCHLEVEL++ 
