--- a/kernels/hibernate-script/HISTORY
+++ b/kernels/hibernate-script/HISTORY
@@ -1,4 +1,7 @@
 2008-01-01 Mathieu Lonjaret <lejatorn@sourcemage.org>
+	* INSTALL: (unnecessary?) cd to SOURCE_DIRECTORY in INSTALL 
+
+2008-01-01 Mathieu Lonjaret <lejatorn@sourcemage.org>
 	* DETAILS: update to 1.97
 
 2006-12-03 Flavien Bridault <vlaaad@sourcemage.org>
