--- a/http/gnash/HISTORY
+++ b/http/gnash/HISTORY
@@ -1,3 +1,6 @@
+2008-01-02 Pol Vinogradov <vin.public@gmail.com>
+	* INSTALL: switched to icecat{,-bin}
+
 2007-10-22 Pol Vinogradov <vin.public@gmail.com>
 	* INSTALL: added iceweasel{,-bin} support
 
