--- a/http/midori/HISTORY
+++ b/http/midori/HISTORY
@@ -1,3 +1,6 @@
+2008-01-02 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.0.16, cleaned up
+
 2007-12-20 George Sherwood <geroge@beernabeer.com>
 	* DEPENDS: optional_depends gnome-icon-theme to have all icons present
 
@@ -6,4 +9,3 @@
 
 2007-12-09 George Sherwood <george@beernabeer.com>
 	* DEPENDS, DETAILS: spell created
-
