--- a/python-devel/sqlalchemy/HISTORY
+++ b/python-devel/sqlalchemy/HISTORY
@@ -1,3 +1,6 @@
+2008-01-02 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.4.2
+
 2007-12-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.4.1
 
