--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* utils/qutescoop: new spell, a status viewer for networks like
+	  VATSIM
+
 2007-12-30 Remko van der Vossen <wich@sourcemage.org>
 	* doc/mnemosyne: new spell, a flashcard memorization aid
 
