--- a/kernels/ndiswrapper/HISTORY
+++ b/kernels/ndiswrapper/HISTORY
@@ -1,3 +1,6 @@
+2008-01-03 Arjan Bouter <abouter@sourcemage.org>
+	* FINAL: added, to remove the leftover source dir
+
 2007-12-01 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.50
 
