--- a/windowmanagers/aewm/HISTORY
+++ b/windowmanagers/aewm/HISTORY
@@ -1,3 +1,6 @@
+2008-01-03 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: version 1.3.12
+
 2007-11-11 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: version 1.3.11
 
