--- a/windowmanagers/dwm/HISTORY
+++ b/windowmanagers/dwm/HISTORY
@@ -1,3 +1,6 @@
+2008-01-03 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: version 4.7
+
 2007-11-11 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: version 4.6
 
