--- a/windowmanagers/larswm/HISTORY
+++ b/windowmanagers/larswm/HISTORY
@@ -1,3 +1,6 @@
+2008-01-03 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: fixed website
+
 2007-11-11 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: fixed download url
 
