--- a/windowmanagers/icewm/HISTORY
+++ b/windowmanagers/icewm/HISTORY
@@ -1,3 +1,7 @@
+2008-01-03 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: version 1.2.34 and added testing version 1.3.2
+	* PREPARE: added testing version
+
 2007-12-05 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 1.2.33
 	* DEPENDS: Added depends libxrandr, if using xorg-modular
