--- a/windowmanagers/wmx/HISTORY
+++ b/windowmanagers/wmx/HISTORY
@@ -1,3 +1,6 @@
+2008-01-03 Arjan Bouter <abouter@sourcemage.org>
+        * PREPARE: only ask autoupdate when using cvs
+
 2007-11-28 Arjan Bouter <abouter@sourcemage.org>
 	* DEPENDS,DETAILS,HISTORY,INSTALL,PREPARE,wmx.desktop:
 	  created spell
