--- a/gnome2-libs/pygobject/HISTORY
+++ b/gnome2-libs/pygobject/HISTORY
@@ -1,3 +1,7 @@
+2008-01-03 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 2.14.1
+
 2007-12-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: Fixed SOURCE_URL[0], cleaned up
 	  updated spell to 2.14.0
