--- a/mail/dovecot/HISTORY
+++ b/mail/dovecot/HISTORY
@@ -1,3 +1,7 @@
+2008-01-03 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: updated to 1.0.10, sieve 1.0.2 and
+	           managesieve to 1.0.10 v9.1
+
 2007-11-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: updated spell to 1.0.8
 	  updated managesieve patch to v9
