--- a/libs/sdl_mixer/HISTORY
+++ b/libs/sdl_mixer/HISTORY
@@ -1,3 +1,6 @@
+2008-01-04 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.2.8
+
 2007-11-04 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: patchlevel++, removed UPDATED
 	* DEPENDS: fixed mikmod options
