--- a/xorg-xserver/xorg-server/HISTORY
+++ b/xorg-xserver/xorg-server/HISTORY
@@ -1,3 +1,6 @@
+2008-01-04 Juuso Alasuutari <iuso@sourcemage.org>
+	* UP_TRIGGERS: Fixed loop constructs, fixes bug #14166.
+
 2007-12-25 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: updated spell to 1.4.0.90
 	  fixed long description wrap
