--- a/graphics-libs/cimg/HISTORY
+++ b/graphics-libs/cimg/HISTORY
@@ -1,3 +1,6 @@
+2008-01-04 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.2.6
+
 2007-09-26 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.2.4
 
