--- a/python-devel/itools/HISTORY
+++ b/python-devel/itools/HISTORY
@@ -1,3 +1,6 @@
+2008-01-04 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.20.2
+
 2007-12-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.20.0
 
