--- a/python-devel/django/HISTORY
+++ b/python-devel/django/HISTORY
@@ -1,3 +1,6 @@
+2008-01-05 Alexander Tsamutali <astsmtl@gmail.com>
+	* DETAILS: Updated to 0.96.1
+
 2007-09-03 Alexander Tsamutali <astsmtl@gmail.com>
 	* CONFIGURE: Removed
 	* DEPENDS: Added optional dependency on bash-completion
