--- a/utils/virtualbox/HISTORY
+++ b/utils/virtualbox/HISTORY
@@ -1,3 +1,8 @@
+2008-01-04 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DEPENDS: pulseaudio is now an optional dependency
+	* BUILD: added $OPTS to configure, removed patch for Xcursor from xorg-modular
+	* Xcursor.patch: removed, no longer needed
+
 2008-01-01 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.5.4
 	* DEPENDS: added pulseaudio
