--- a/printer/gutenprint/HISTORY
+++ b/printer/gutenprint/HISTORY
@@ -1,3 +1,7 @@
+2008-01-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.1.6
+	  fixed long description wrap
+
 2007-12-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.1.5
 
