--- a/ftp/transmission/HISTORY
+++ b/ftp/transmission/HISTORY
@@ -1,3 +1,7 @@
+2008-01-05 Vlad Glagolev <stealth@sourcemage.org>
+	* transmission-1.00.tar.bz2.sig: readded sig
+	  due the new upstream sources
+
 2008-01-04 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.00
 	* DEPENDS: cleaned up
