--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-05  Treeve Jelbert <treeve@sourcemage.org>
+	* graphics-libs/libspectre: new spell, Postscript library
+
 2008-01-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* utils/qutescoop: new spell, a status viewer for networks like
 	  VATSIM
