--- a/utils/virtualbox/HISTORY
+++ b/utils/virtualbox/HISTORY
@@ -1,3 +1,6 @@
+2008-01-05 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DEPENDS: added libidl as dependency
+
 2008-01-04 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DEPENDS: pulseaudio is now an optional dependency
 	* BUILD: added $OPTS to configure, removed patch for Xcursor from xorg-modular
