--- a/ftp/deluge/HISTORY
+++ b/ftp/deluge/HISTORY
@@ -1,3 +1,6 @@
+2008-01-05 Philippe "Puppet_Master" Caseiro <puppetmaster@sourcemage.org>
+	* DETAILS: version update to 0.5.8
+
 2007-12-24 Elisamuel Resto <ryuji@sourcemage.org>
 	* DETAILS: version update to 0.5.7.95
 
