--- a/graphics/yafray/HISTORY
+++ b/graphics/yafray/HISTORY
@@ -1,3 +1,8 @@
+2008-01-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL++
+	* DEPENDS: cleaned up
+	* BUILD: fixed etc dir
+
 2007-12-08 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS, DEPENDS: cleaned up, PATCHLEVEL++
 	* BUILD, INSTALL: made it workable in blender
@@ -52,4 +57,3 @@
 
 2003-01-17 Robert Helgesson <rycee@home.se>
 	* Created spell
-
