--- a/php-pear/php/HISTORY
+++ b/php-pear/php/HISTORY
@@ -1,3 +1,6 @@
+2008-01-05 Elisamuel Resto <ryuji@sourcemage.org>
+	* DEPENDS: added optional dependency on re2c for parser regeneration
+
 2007-12-16 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* PRE_BUILD: minor mistake
 
