--- a/php-pear/php-dev/HISTORY
+++ b/php-pear/php-dev/HISTORY
@@ -1,3 +1,6 @@
+2008-01-05 Elisamuel Resto <ryuji@sourcemage.org>
+	* DEPENDS: added optional re2c dependency for parser regeneration
+
 2007-06-10 George Sherwood <george@beernabeer.com>
 	* DEPENDS: Added from php spell.  Added depends icu.
 	* DETAILS: Updated to version 6.  Added autoupdate.
