--- a/php-pear/php-dev/HISTORY
+++ b/php-pear/php-dev/HISTORY
@@ -1,5 +1,6 @@
 2008-01-05 Elisamuel Resto <ryuji@sourcemage.org>
 	* DEPENDS: added optional re2c dependency for parser regeneration
+	* BUILD: added suggestion by Andrew on bug #9172
 
 2007-06-10 George Sherwood <george@beernabeer.com>
 	* DEPENDS: Added from php spell.  Added depends icu.
