--- a/php-pear/php4/HISTORY
+++ b/php-pear/php4/HISTORY
@@ -1,3 +1,6 @@
+2008-01-05 Elisamuel Resto <ryuji@sourcemage.org>
+	* DETAILS: updated VERSION to 4.4.8; SECURITY_PATCH++
+
 2007-05-05 George Sherwood <george@beernabeer.com>
 	* DETAILS: updated spell to 4.4.7
 	  SECURITY_PATCH++. Bug #13758
