--- a/kernels/mac80211/HISTORY
+++ b/kernels/mac80211/HISTORY
@@ -1,3 +1,6 @@
+2008-01-05 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 10.0.3
+
 2007-11-28 Eric Sandall <sandalle@sourcemage.org>
 	* INSTALL: Copy new .config to /boot for get_kernel_config to use
 
