--- a/kernels/iwlwifi/HISTORY
+++ b/kernels/iwlwifi/HISTORY
@@ -1,3 +1,6 @@
+2008-01-05 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 1.2.23
+
 2007-12-02 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.2.22
 	* BUILD: KSRC is the proper way to define what kernel to use to compile
