--- a/kernels/mac80211/INSTALL
+++ b/kernels/mac80211/INSTALL
@@ -1,4 +1,1 @@
-cd  $INSTALL_ROOT/lib/modules/$(get_kernel_version)/build           &&
-make  modules_install                                               &&
-cp  $INSTALL_ROOT/lib/modules/$(get_kernel_version)/source/.config  \
-    $INSTALL_ROOT/boot/config-$(get_kernel_version)
+true
