--- a/devel/python/HISTORY
+++ b/devel/python/HISTORY
@@ -1,3 +1,9 @@
+2008-01-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL++
+	* INSTALL: temp-move site-packages before installing python
+	* FINAL: push back site-packages if it's the same version of python
+	* TRIGGERS, UP_TRIGGERS: cleaned up
+
 2007-12-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: fixed the huge bug in spell, now python's recasting won't
 	  include all files from the pythonic modules/apps in site-packages:
