--- a/devel/python/HISTORY
+++ b/devel/python/HISTORY
@@ -1,3 +1,7 @@
+2008-01-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: PATCHLEVEL++
+	* SUB_DEPENDS PRE_SUB_DEPENDS: add entries for db & sqlite
+	
 2008-01-05 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL++
 	* INSTALL: temp-move site-packages before installing python
