--- a/gnome2-apps/gramps/HISTORY
+++ b/gnome2-apps/gramps/HISTORY
@@ -1,3 +1,7 @@
+2008-01-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: add '-sub db python' and librsvg2
+	  change optionals to suggests
+
 2007-10-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS:  version 2.2.9
 
