--- a/python-devel/cheetah/HISTORY
+++ b/python-devel/cheetah/HISTORY
@@ -1,3 +1,6 @@
+2008-01-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.0.1
+
 2007-10-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.0
 
