--- a/python-devel/turbojson/HISTORY
+++ b/python-devel/turbojson/HISTORY
@@ -1,3 +1,6 @@
+2008-01-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1.2
+
 2007-11-01 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.1.1
 
