--- a/devel/rake/HISTORY
+++ b/devel/rake/HISTORY
@@ -1,3 +1,6 @@
+2008-01-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.8.1
+
 2007-12-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.8.0
 
