--- a/gnome2-libs/goffice-0.6/HISTORY
+++ b/gnome2-libs/goffice-0.6/HISTORY
@@ -1,3 +1,6 @@
+2008-01-06 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: PATCHLEVEL++, fixed the patch
+
 2008-01-04 Robin Cook <rcook@wyrms.net>
 	* DETAILS: PATCHLEVEL++
 	* PRE_BUILD: changed to patch that actually fixes the problem.
