--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2008-01-06 Ladislav Hagara <hgr@vabo.cz>
 	* e/exquisite: new spell, an EFL based psplash replacement
+	* e/emprint: new spell, an EFL based utility for taking screenshots
 
 2008-01-05  Treeve Jelbert <treeve@sourcemage.org>
 	* graphics-libs/libspectre: new spell, Postscript library
