--- a/perl-cpan/perl/HISTORY
+++ b/perl-cpan/perl/HISTORY
@@ -1,3 +1,8 @@
+2008-01-06 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.10.0, hash => gpg
+	* DEPENDS, INSTALL, UP_TRIGGERS: cleaned up
+	* PRE_BUILD: no more needed
+
 2007-06-19 Elisamuel Resto <ryuji@mages.ath.cx>
 	* PRE_BUILD: Added a patch to fix build with gcc-4.2.0 (Bug #13847)
 
