--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-06 Elisamuel Resto <ryuji@sourcemage.org>
+	* php-pear/MAINTAINER: I will be replacing Sergey for this section
+
 2008-01-06 Ladislav Hagara <hgr@vabo.cz>
 	* e/exquisite: new spell, an EFL based psplash replacement
 	* e/emprint: new spell, an EFL based utility for taking screenshots
