--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-06 Vlad Glagolev <stealth@sourcemage.org>
+	* perl-cpan/MAINTAINER: add myself as maintainer
+
 2008-01-06 Elisamuel Resto <ryuji@sourcemage.org>
 	* php-pear/MAINTAINER: I will be replacing Sergey for this section
 
