--- a/libs/guichan/HISTORY
+++ b/libs/guichan/HISTORY
@@ -1,3 +1,8 @@
+2008-01-06 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 0.6.1
+	  SOURCE no longer contains "-src"
+	* PRE_BUILD: Removed, no longer needed to remove -Werror
+
 2007-04-23 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* PRE_BUILD: remove -Werror
 
