--- a/python-devel/django/HISTORY
+++ b/python-devel/django/HISTORY
@@ -1,3 +1,6 @@
+2008-01-06 Alexander Tsamutali <astsmtl@gmail.com>
+	* PREPARE, DETAILS: Added option to install SVN version
+
 2008-01-05 Alexander Tsamutali <astsmtl@gmail.com>
 	* DETAILS: Updated to 0.96.1
 
