--- a/gnome2-apps/bluez-gnome/HISTORY
+++ b/gnome2-apps/bluez-gnome/HISTORY
@@ -1,3 +1,6 @@
+2008-01-06 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 0.15
+
 2007-09-28 Martin Klein <martin@makl.de>
 	* DETAILS: updated spell to 0.14
 
