--- a/libs/bluez-libs/HISTORY
+++ b/libs/bluez-libs/HISTORY
@@ -1,3 +1,6 @@
+2008-01-06 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 3.24
+
 2007-12-16 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 3.23
 
