--- a/kde4/kdelibs4/HISTORY
+++ b/kde4/kdelibs4/HISTORY
@@ -1,3 +1,6 @@
+2008-01-06 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DEPENDS: force a recompile of soprano if it is too old
+
 2007-12-11  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.97.0
 
