--- a/disk/burn-cd/HISTORY
+++ b/disk/burn-cd/HISTORY
@@ -1,3 +1,6 @@
+2008-01-06 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated to 1.7.3
+
 2008-01-01 Vlad Glagolev <stealth@sourcemage.org>
 	* INSTALL: /bin => /usr/bin
 
