--- a/gnome2-apps/abiword/HISTORY
+++ b/gnome2-apps/abiword/HISTORY
@@ -1,3 +1,7 @@
+2008-01-06 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: cleaned up, removed UPDATED
+	* DEPENDS: added threaded perl as a dep (bug #11529)
+
 2007-10-29 George Sherwood <george@beernabeer.com>
 	* DEPENDS: Updated so devel version builds without gnome libs.
 	  Stable still depends on libgnomeprintui.
