--- a/archive-libs/zziplib/HISTORY
+++ b/archive-libs/zziplib/HISTORY
@@ -1,3 +1,7 @@
+2008-01-06 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: PATCHLEVEL=1
+	* BUILD: Fix datadir location (See Debian Bug #439395)
+
 2007-09-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.13.49
 
