--- a/libs/soprano/HISTORY
+++ b/libs/soprano/HISTORY
@@ -1,3 +1,6 @@
+2008-01-06 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* PRE_BUILD, jniwrapper-qatomic.patch: apply patch for a bad/missing include
+
 2007-12-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.99-rc2
 	* PREPARE: disable devel/stable test
