--- a/x11-toolkits/qt4/HISTORY
+++ b/x11-toolkits/qt4/HISTORY
@@ -1,3 +1,6 @@
+2008-01-06 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* CONFIGURE: added a complement to the bugfix of 2007-11-16 - option change
+
 2007-12-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: update snapshot to 4.4.4
 	  fix typo
