--- a/http/webkitgtk/HISTORY
+++ b/http/webkitgtk/HISTORY
@@ -1,3 +1,6 @@
+2008-01-06 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to r29208
+
 2008-01-05 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to r29180
 
