--- a/audio-libs/openal/HISTORY
+++ b/audio-libs/openal/HISTORY
@@ -1,3 +1,7 @@
+2008-01-06 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: PATCHLEVEL=3
+	* INSTALL: Fix openal.pc having "@requirements@", should be empty
+
 2008-01-05 Eric Sandall <sandalle@sourcemage.org>
 	* BUILD: release version fails with multiple make jobs
 	* PRE_SUB_DEPENDS, SUB_DEPENDS: Added to allow forcing the version
