--- a/video-libs/xine-lib/HISTORY
+++ b/video-libs/xine-lib/HISTORY
@@ -1,3 +1,6 @@
+2008-01-06 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.1.9
+
 2007-11-09 Treeve Jelbert <treeve@sourcemage.org>
 	* PRE_BUILD:  insert limits.h in src/input/vcd/libcdio/_cdio_linux.c
 	  fixes bug #14090
