--- a/graphics-libs/ogre/HISTORY
+++ b/graphics-libs/ogre/HISTORY
@@ -1,3 +1,6 @@
+2008-01-06 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 1.4.6
+
 2007-08-21 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD: added a missing $ which made BUILD fail
 
