--- a/graphics-libs/cegui/HISTORY
+++ b/graphics-libs/cegui/HISTORY
@@ -1,3 +1,6 @@
+2008-01-06 Eric Sandall <sandalle@sourcemage.org>
+	* SUB_DEPENDS, PRE_SUB_DEPENDS: Allow forcing of lua (for ember)
+
 2007-04-25 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: version update
 	* DEPENDS: revamp
