--- a/gnome2-apps/system-tools-backends/HISTORY
+++ b/gnome2-apps/system-tools-backends/HISTORY
@@ -1,3 +1,6 @@
+2008-01-20 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.4.2
+
 2007-09-21 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.4.0
 
