--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-20 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* gnome1-apps/{ee,gtop,gnofin}: removed, deprecation complete #1231{0,6,7}
+
 2008-01-20 George Sherwood <george@beernabeer.com>
 	* libs/aqbanking2: Added new spell
 	* libs/gwenhywfar2: Added new spell
