--- a/utils/plan9port/HISTORY
+++ b/utils/plan9port/HISTORY
@@ -1,3 +1,6 @@
+2008-01-21 Mathieu Lonjaret <lejatorn@sourcemage.org>
+	* DETAILS: update to 20080113
+
 2007-12-08 Mathieu Lonjaret <lejatorn@sourcemage.org>
 	* DETAILS: update to 20071208
 
