--- a/graphics/imagemagick/HISTORY
+++ b/graphics/imagemagick/HISTORY
@@ -1,3 +1,6 @@
+2008-01-21 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 6.3.8-0
+
 2008-01-17 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 6.3.7-10
 
