--- a/libs/gwenhywfar/HISTORY
+++ b/libs/gwenhywfar/HISTORY
@@ -1,3 +1,7 @@
+2008-01-21 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 3.0.1. Fixed SOURCE_URL. No longer
+	  hosted on Sourceforge.
+
 2008-01-20 George Sherwood <george@beernabeer.com>
 	* CONFLICTS: Added. conflicts gwenhywfar2
 
