--- a/libs/aqbanking/HISTORY
+++ b/libs/aqbanking/HISTORY
@@ -1,3 +1,7 @@
+2008-01-21 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 3.0.1.
+	* BUILD: Removed broken backend aqdtaus. make_single
+
 2008-01-20 George Sherwood <george@beernabeer.com>
 	* CONFLICTS: Added.  conflicts aqbanking2
 
