--- a/python-pypi/fpconst/HISTORY
+++ b/python-pypi/fpconst/HISTORY
@@ -1,3 +1,6 @@
+2008-01-21 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: fixed hash
+
 2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: cleaned up, fixed SOURCE_URL
 
