--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-21 Vlad Glagolev <stealth@sourcemage.org>
+	* python-pypi/elementsoap: new spell, light-weight SOAP implementation
+
 2008-01-20 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* gnome1-apps/{ee,gtop,gnofin}: removed, deprecation complete #1231{0,6,7}
 
