--- a/utils/rsbep/HISTORY
+++ b/utils/rsbep/HISTORY
@@ -1,3 +1,6 @@
+2008-01-21 Martin Spitzbarth <m.spitzbarth@gmx.de>
+	* CONFIGURE: Limited the query for asm routines to ia32
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
