--- a/http/privoxy/HISTORY
+++ b/http/privoxy/HISTORY
@@ -1,3 +1,6 @@
+2008-01-21 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.0.8
+
 2006-12-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.0.7
 	  use gpg checking
