--- a/video/kaffeine/HISTORY
+++ b/video/kaffeine/HISTORY
@@ -1,3 +1,6 @@
+2008-01-21 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS : updated version to 0.8.6
+
 2008-01-17 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DEPENDS: added cdparanoia #14226
 
