--- a/disk/xfsprogs/HISTORY
+++ b/disk/xfsprogs/HISTORY
@@ -1,3 +1,6 @@
+2008-01-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.9.5
+
 2007-11-13 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1, hash => gpg
 	* BUILD: fixed sbin dir for fsck (needed @ boot), cleaned up
