--- a/fonts/dejavu-ttf/HISTORY
+++ b/fonts/dejavu-ttf/HISTORY
@@ -1,3 +1,8 @@
+2008-01-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.23
+	  fixed long description wrap
+	  cleaned up
+
 2007-12-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.22
 	* INSTALL: change from directory
