--- a/utils/supervise-scripts/HISTORY
+++ b/utils/supervise-scripts/HISTORY
@@ -1,3 +1,6 @@
+2008-01-21 Mark Bainter <mbainter-smgl@trampledstones.com>
+	* DETAILS: Added MAKE_NJOBS=1
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
