--- a/utils/sudo/HISTORY
+++ b/utils/sudo/HISTORY
@@ -1,3 +1,7 @@
+2008-01-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.6.9p12
+	* TRIGGERS: removed useless is_depends_enabled.function inc
+
 2008-01-09 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.6.9p11
 
