--- a/devel/automake/HISTORY
+++ b/devel/automake/HISTORY
@@ -1,5 +1,5 @@
 2008-01-22 Vlad Glagolev <stealth@sourcemage.org>
-	* DETAILS: updated spell to 1.10.1, fixed UPSTREAM_KEY
+	* DETAILS: updated spell to 1.10.1, fixed VERIFIED_UPSTREAM_KEY
 	* INSTALL: replaced $INSTALL_ROOT with $TRACK_ROOT
 
 2006-10-22 George Sherwood <george@beernabeer.com>
