--- a/http/webkitgtk/HISTORY
+++ b/http/webkitgtk/HISTORY
@@ -1,3 +1,6 @@
+2008-01-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to r29711
+
 2008-01-14 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to r29438, added SVG support
 
