--- a/net/ferm/HISTORY
+++ b/net/ferm/HISTORY
@@ -1,3 +1,6 @@
+2008-01-22 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.3.3
+
 2007-12-23 Vlad Glagolev <stealth@sourcemage.org>
 	* init.d/ferm: fix iptables issue for preloading kernel module
 
