--- a/ftp/transmission/HISTORY
+++ b/ftp/transmission/HISTORY
@@ -1,3 +1,6 @@
+2008-01-23 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.02
+
 2008-01-12 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.01
 
