--- a/libs/libxml2/HISTORY
+++ b/libs/libxml2/HISTORY
@@ -1,3 +1,6 @@
+2008-01-22 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.6.31, SECURITY_PATCH=1
+
 2007-09-08 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.6.30
 
