--- a/shell-term-fm/sakura/HISTORY
+++ b/shell-term-fm/sakura/HISTORY
@@ -1,3 +1,6 @@
+2008-01-23 Alexander Tsamutali <astsmtl@gmail.com>
+	* DETAILS: updated spell to 2.0.1
+
 2008-01-12 Alexander Tsamutali <astsmtl@gmail.com>
 	* DETAILS: updated spell to 2.0.0
 	* DEPENDS, BUILD: now uses cmake
