--- a/audio-soft/qjackctl/HISTORY
+++ b/audio-soft/qjackctl/HISTORY
@@ -1,3 +1,6 @@
+2008-01-23 Juuso Alasuutari <iuso@sourcemage.org>
+	* DETAILS: Updated to 0.3.2.
+
 2007-10-20 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS, DEPENDS, PRE_BUILD: Added cvs version.
 	* PREPARE: Added, for cvs version query.
