--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
 2008-01-23 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* x11-toolkits/wxruby: a GUI toolkit for Ruby #14194 (by linuxfan)
 	* kde-apps/basket: a feature rich note taking app for KDE #14186 (by ilj)
+	* libs/pykde: a set of Python bindings for KDE #13960 (by _kaze_)
 
 2008-01-22 Juuso Alasuutari <iuso@sourcemage.org>
 	* audio-drivers/jackmidi_alsaseq: Deprecated because JACK now has
