--- a/audio-libs/openal/HISTORY
+++ b/audio-libs/openal/HISTORY
@@ -1,3 +1,8 @@
+2008-01-23 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* PREPARE, BUILD: added an option for disabling OSS support
+	* DEPENDS: new configure option for smpeg, the old one is
+	  deprecated
+
 2008-01-06 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: PATCHLEVEL=3
 	* INSTALL: Fix openal.pc having "@requirements@", should be empty
