--- a/ruby-raa/wxruby/HISTORY
+++ b/ruby-raa/wxruby/HISTORY
@@ -1,3 +1,7 @@
+2008-01-23 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* BUILD, INSTALL: removed no longer needed
+	* DETAILS: MIT/XCL license
+
 2008-01-23 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DETAILS: fixed long description wrap
 
