--- a/ruby-raa/alexandria/HISTORY
+++ b/ruby-raa/alexandria/HISTORY
@@ -1,3 +1,6 @@
+2008-01-23 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DEPENDS: use the ruby version of image-size
+
 2008-01-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* BUILD,INSTALL: using default_ functions now
 
