--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-23 Eric Sandall <sandalle@sourcemage.org>
+	* e/e_module-execwatch: Added E17 module for monitoring program exit status
+
 2008-01-23 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* ruby-raa/image_size: new spell, ruby_image size module
 	* x11-toolkits/wxruby: moved to ruby-raa
