--- a/e/e_modules/HISTORY
+++ b/e/e_modules/HISTORY
@@ -1,3 +1,6 @@
+2008-01-23 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Added optional dependency on e_module-execwatch
+
 2008-01-15 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Added alarm, forecasts, news, taskbar, mpdule, echo, and
 	  penguins to description
