--- a/security/shadow/HISTORY
+++ b/security/shadow/HISTORY
@@ -1,3 +1,8 @@
+2008-01-23 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: shadow now provides /bin/su, PATCHLEVEL=2 [Bug 14247]
+	* pam.d/su: added (from coreutils)
+	* BUILD, su.patch: removed patch
+
 2007-11-13 Ladislav Hagara <hgr@vabo.cz>
 	* BUILD, shadow-4.0.18.1-useradd-usermod.patch: added patch from Gentoo
 	* DETAILS: fixed SOURCE_URL[0]
