--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-24 Vlad Glagolev <stealth@sourcemage.org>
+	* shell-term-fm/vifm: new spell, ncurses based file manager with vi
+	  like keybindings
+
 2008-01-23 Eric Sandall <sandalle@sourcemage.org>
 	* e/e_module-execwatch: Added E17 module for monitoring program exit status
 	* e/enna: Added an EFL media center
