--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2008-01-24 Vlad Glagolev <stealth@sourcemage.org>
 	* shell-term-fm/vifm: new spell, ncurses based file manager with vi
 	  like keybindings
+	* python-pypi/lfm: new spell, simple but powerful file manager for
+	  the UNIX console written in Python
 
 2008-01-23 Eric Sandall <sandalle@sourcemage.org>
 	* e/e_module-execwatch: Added E17 module for monitoring program exit status
