--- a/http/midori/HISTORY
+++ b/http/midori/HISTORY
@@ -1,3 +1,6 @@
+2008-01-24 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.0.17
+
 2008-01-02 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.0.16, cleaned up
 
