--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-24 Eric Sandall <sandalle@sourcemage.org>
+	* e/bang: Added E17 module for OpenGL Composite effects
+
 2008-01-24 George Sherwood <george@beernabeer.com>
 	* graphics/rawstudio: Added new spell
 
