--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,8 @@
+2008-01-25 Vlad Glagolev <stealth@sourcemage.org>
+	* latest.defaults: updated latest to 2.6.24
+	* info/patches/maintenance_patches/patch-2.6.24: added
+	* info/patches/PRE_2_6/patch-2.6.24: added
+
 2008-01-16 Ladislav Hagara <hgr@vabo.cz>
 	* latest.defaults: updated latest to patch-2.6.24-rc8
 	* info/patches/PRE_2_6/patch-2.6.24-rc8: added
