--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,6 @@
+2008-01-25 Eric Sandall <sandalle@sourcemage.org>
+	* info/patches/smgl_patches/smgl-logo-0.2-for-2.6.22.patch: Supports 2.6.24
+
 2008-01-25 Vlad Glagolev <stealth@sourcemage.org>
 	* latest.defaults: updated latest to 2.6.24
 	* info/patches/maintenance_patches/patch-2.6.24: added
