--- a/http/apache/HISTORY
+++ b/http/apache/HISTORY
@@ -1,3 +1,6 @@
+2008-01-25 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Optionally depend on gdbm (Bug #14241) for mod_rewrite
+
 2008-01-19 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.3.41, SECURITY_PATCH=3
 	  http://httpd.apache.org/security/vulnerabilities_13.html
