--- a/x11-toolkits/gtkmm2/HISTORY
+++ b/x11-toolkits/gtkmm2/HISTORY
@@ -1,3 +1,7 @@
+2008-01-25 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.12.4, cleaned up,
+	  fixed WEB_SITE
+
 2007-11-13 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.12.3
 
