--- a/x11/x2x/HISTORY
+++ b/x11/x2x/HISTORY
@@ -1,3 +1,6 @@
+2008-01-25 Ethan Grammatikidis <eekee57@fastmail.fm>
+	* DETAILS: corrected WEB_SITE
+
 2008-01-14 Ethan "eekee" Grammatikidis <eekee57@fastmail.fm>
 	* DETAILS: Shortened SHORT
 
