--- a/gnome2-libs/orbit2/HISTORY
+++ b/gnome2-libs/orbit2/HISTORY
@@ -1,3 +1,6 @@
+2008-01-25 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.14.11
+
 2007-10-16 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.14.10
 
