--- a/net/openntpd/HISTORY
+++ b/net/openntpd/HISTORY
@@ -1,3 +1,7 @@
+2008-01-26 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.9p1
+	  fixed long description wrap, fixed WEB_SITE, long desc.
+
 2007-11-11 Vlad Glagolev <stealth@sourcemage.org>
 	* init.d/ntp: removed '-s' flag, cause startup with it takes
 	  too much time when network is down (for example @ laptop)
