--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-26 Vlad Glagolev <stealth@sourcemage.org>
+        * lua-forge/luaposix: new spell, POSIX library for Lua
+	* lua-forge/lua-imlib2: new spell, binding to the imlib2 image library
+
 2008-01-24 Eric Sandall <sandalle@sourcemage.org>
 	* e/bang: Added E17 module for OpenGL Composite effects
 	* libs/tslib: Added a touchscreen panel library
