--- a/graphics-libs/poppler/HISTORY
+++ b/graphics-libs/poppler/HISTORY
@@ -1,3 +1,6 @@
+2008-01-26 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.6.4
+
 2007-12-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.6.3
 
