--- a/audio-drivers/nas/HISTORY
+++ b/audio-drivers/nas/HISTORY
@@ -1,3 +1,6 @@
+2008-01-26 Ethan Grammatikidis <eekee57@fastmail.fm>
+	* init.d/nasd: fixed to work with monolithic or modular xorg
+
 2008-01-03 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DEPENDS: added missing dependencies #13343
 
