--- a/devel/geany/HISTORY
+++ b/devel/geany/HISTORY
@@ -1,3 +1,7 @@
+2008-01-26 Vlad Glagolev <stealth@sourcemage.org>
+	* BUILD, DETAILS, DEPENDS, PREPARE: added `night' version
+	  from svn tarball, fixed short/long desc
+
 2008-01-15 Elisamuel Resto <ryuji@sourcemage.org>
 	* DEPENDS: added xml-parser-expat as a hard dep, fails without it
 
@@ -43,4 +47,3 @@
 
 2005-11-21 George Sherwood <george@beernabeer.com>
 	* ALL: Initial version of spell 0.3
-
