--- a/lua-forge/lua/HISTORY
+++ b/lua-forge/lua/HISTORY
@@ -1,3 +1,8 @@
+2008-01-27 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 5.1.3, fixed short desc,
+	  fixed long description wrap
+	* DEPENDS: added `&&'
+
 2008-01-10 Vlad Glagolev <stealth@sourcemage.org>
 	* BUILD, DEPENDS: cleaned up
 	* INSTALL: removed the dirty hacks
